--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
           ><img src="images/logo.png" alt="logo"
         /></a>
         <div class="featured">
-          <img src="./images/golfer.jpg" alt="" width="980" height="480" />
+          <img src="images/golfer.jpg" alt="" width="980" height="480" />
           <ul>
             <li class="selected">
               <a href="index.html">PORTRAIT</a>
