--- a/index.html
+++ b/index.html
@@ -136,13 +136,13 @@
                     width="240"
                     height="150"
                 /></a>
-                <p>Smile from Namibia.</p>
+                <p>Tamala Beach Resort.</p>
               </li>
               <li>
                 <a href="blog.html"
                   ><img src="images/sushi.jpg" alt="" width="240" height="150"
                 /></a>
-                <p>Smile from Guinea Bissau.</p>
+                <p>For vacation in Africa.</p>
               </li>
             </ul>
             <ul>
@@ -154,7 +154,7 @@
                     width="240"
                     height="150"
                 /></a>
-                <p>Smile from Uganda.</p>
+                <p>A village in Africa.</p>
               </li>
               <li>
                 <a href="blog.html"
@@ -164,7 +164,7 @@
                     width="240"
                     height="150"
                 /></a>
-                <p>Smile from Eswathini.</p>
+                <p>Senegambia Beach Hotel.</p>
               </li>
             </ul>
           </div>
