--- a/index.html
+++ b/index.html
@@ -94,10 +94,10 @@
           </li>
         </ul>
         <div class="connect">
-          <a href="http://freewebsitetemplates.com/go/facebook/" id="facebook"
+          <a href="https://www.facebook.com/sheikh.bah.5/" id="facebook"
             >facebook</a
           >
-          <a href="http://freewebsitetemplates.com/go/twitter/" id="twitter"
+          <a href="https://twitter.com/SheikhTijanBah3/" id="twitter"
             >twitter</a
           >
           <a
