--- a/suites.html
+++ b/suites.html
@@ -5,6 +5,11 @@
     <meta charset="UTF-8" />
     <title>Suites & Spa - Country Club Website Template</title>
     <link rel="stylesheet" href="css/style.css" type="text/css" />
+    
+    <!-- Website template by freewebsitetemplates.com -->
+    #more {display: none;}
+</style>
+    <!-- Website template by freewebsitetemplates.com -->
   </head>
   <body>
     <div class="page">
@@ -128,6 +133,32 @@
           </div>
         </div>
       </div>
+ <!-- Website template by freewebsitetemplates.com -->
+</head>
+<body>
+
+<h2>Read More Read Less Button</h2>
+<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus imperdiet, nulla et dictum interdum, nisi lorem egestas vitae scel<span id="dots">...</span><span id="more">erisque enim ligula venenatis dolor. Maecenas nisl est, ultrices nec congue eget, auctor vitae massa. Fusce luctus vestibulum augue ut aliquet. Nunc sagittis dictum nisi, sed ullamcorper ipsum dignissim ac. In at libero sed nunc venenatis imperdiet sed ornare turpis. Donec vitae dui eget tellus gravida venenatis. Integer fringilla congue eros non fermentum. Sed dapibus pulvinar nibh tempor porta.</span></p>
+<button onclick="myFunction()" id="myBtn">Read more</button>
+
+<script>
+function myFunction() {
+  var dots = document.getElementById("dots");
+  var moreText = document.getElementById("more");
+  var btnText = document.getElementById("myBtn");
+
+  if (dots.style.display === "none") {
+    dots.style.display = "inline";
+    btnText.innerHTML = "Read more"; 
+    moreText.style.display = "none";
+  } else {
+    dots.style.display = "none";
+    btnText.innerHTML = "Read less"; 
+    moreText.style.display = "inline";
+  }
+}
+</script>
+ <!-- Website template by freewebsitetemplates.com -->
       <div class="footer">
         <p>&#169; Copyright 2012. All rights reserved.</p>
         <p>Student ID: 20229508.</p>
