--- a/suites.html
+++ b/suites.html
@@ -138,7 +138,8 @@
 <body>
 
 <h2>Read More About </h2>
-<p>I decided to continue exploring the Photoshop course I started through LinkedIn. This time, I learned about layering and how it helps professional designers arrange their projects efficiently and productively. One of the key features of “layers” that appears helpful is group layering, which is used to keep related objects, shapes, and pictures together.</span></p>
+
+<p>I decided to continue exploring the Photoshop course I started through LinkedIn. This time, I learned about layering and how it helpsl<span id="dots">...</span><span id="more">I started through LinkedIn. This time, I learned about layering and how it helps professional designers</span></p>
 <button onclick="myFunction()" id="myBtn">Read more</button>
 
 <script>
